--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="vert-text">
             <div class="expandUp">
             <h2><b>为彰显社会责任的私教课程</b></h2>
-            <h2><b>提供提供奖励和支持</b></h2>
+            <h2><b>提供奖励和支持</b></h2>
             </div></br></br></br></br>
             <ul class="list-inline spaced">
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
