--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a href="#about" onClick="ga('send', '_trackEvent', 'Navbar', 'About');">关于我们</a></li>
             <li><a href="#services" onClick="ga('send', '_trackEvent', 'Navbar', 'services');">获奖项目</a></li>
             <li><a href="#portfolio" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">合作伙伴</a></li>
-            <li><a href="attachments/rewards-catalog.pdf" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">奖品目录</a></li>
+            <li><a href="#Rewards" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">奖励物品</a></li>
             <li><a href="default.html" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">英文网站</a></li>
         </ul>
     </div>
@@ -61,7 +61,7 @@
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
                 <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-list fa-3x"></i></a></li>
                 <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-compact-disc fa-3x"></i></a></li>
-                <li><a href="attachments/rewards-catalog.pdf" target="_blank"  title="奖品目录" alt="奖品目录" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-regular fa-folder-open fa-3x"></i></a></li>
+                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-list-ol fa-3x"></i></a></li>
                 <li><a href="default.html" target="_blank"  title="英文网站" alt="英文网站" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
             </ul>
         </div>
@@ -93,7 +93,7 @@
                 </br></br>
                 &emsp;&emsp;然而在现实情况下，低收入家庭和经济困难者可能就没有机会。我认为金钱不应该决定接受教育的机会，我希望生活在一个所有孩子都能接受良好教育的世界——而不仅仅是那些家庭负担得起的人。
                 </br></br>
-                &emsp;&emsp;为此，我和我的伙伴们愿意为同一个导师、持续6个月以上为低收入家庭和经济困难者免费辅导的私教课程，提供象征性激励的奖品（详见目录），并尽最大努力为这些有社会责任感的私教课程提供商业化推广支持。
+                &emsp;&emsp;为此，我和我的伙伴们愿意为同一个导师、持续6个月以上为低收入家庭和经济困难者免费辅导的私教课程，提供象征性激励的奖品（详见<a href="#Rewards" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">奖励物品</a>），并尽最大努力为这些有社会责任感的私教课程提供商业化推广支持。
                 </br></br>
                 &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持，欢迎您发送邮件给 Min@kb727.com 联系我。
                 </br></br>
@@ -338,7 +338,73 @@
         </div>
     </div>
     <!-- /Findoutmore -->
-    
+
+    </br></br>
+
+    <!-- Rewards -->
+        <div id="Rewards" class="Rewards">
+            <div class="container text-center">
+                <h2><b>奖励物品及可售清单</b></h2>
+                <hr>
+                <p class="lead" style="text-align: left">&emsp;&emsp;以下所列收藏品来源于合作机构与捐赠者的贡献，用于为彰显社会责任的私教课程提供奖励，部分可售，全部包邮送达，请联系 Min@kb727.com 问询相关事宜。</p>
+            </div>
+        </div>
+
+    </br>
+
+    <div id="Rewards-1" class="Rewards">
+        <div class="container">
+                <h3 style="text-align: left"><b>Canon EOS 600D单反相机</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;佳能600D单反相机，18-55镜头，原价：4599元，本站可售报价：2000元。官网信息：https://www.canon.com.cn/product/600d/</br></br>
+                <img src="attachments/CANON-EOS-600D-18-55.jpg" alt="Canon EOS 600D单反相机" width="100%">
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="Rewards-2" class="Rewards">
+        <div class="container">
+                <h3 style="text-align: left"><b>Epson平板式扫描仪</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;产品类型：A4平板式扫描仪</br>
+                &emsp;&emsp;产品型号：Epson Perfection V39</br>
+                &emsp;&emsp;产品简介：4800dpi 超高分辨率，USB 线直连供电，开机即扫；黑色机身，体积娇小，机身轻薄，时尚简洁，适合中小企业、SOHO、个人用户，用于处理纸质票据、老旧照片、手写文档、简报资料​‌‌，不占地方，经久耐用。官网可下载强大的影像数据处理软件，扫描盖板可拆卸，可立式摆放，释放更多空间，特别适合扫描书籍、文档、照片、证件，扫描速度为彩色A4 300dpi 9.9 秒/页。本站捡漏价：280元。</br>
+                &emsp;&emsp;官网介绍：https://www.epson.com.cn/products/scanners/206/V39/</br></br>
+                <img src="attachments/Epson-perfection-v39-scanner.jpg" alt="Epson平板式扫描仪" width="100%">
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="Rewards-3" class="Rewards">
+        <div class="container">
+                <h3 style="text-align: left"><b>广州版《天龙八部》全五册</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;这个版本基本上是买不到了，值得收藏！本站可售报价：300元。</br>
+                &emsp;&emsp;《天龙八部》是作家金庸笔下魁宏复杂的一部武侠小说作品。创作初衷以佛教的神话生物象征，谱写8个主角，各自成章最后交织为一。连载时逐渐发展成多线叙事、伏笔绵密的群像连续剧，以大理段氏、姑苏慕容、萧峯身世为核心，前后达30年的家仇国恨的史诗悲剧。本书横跨地域广阔，牵涉民族与个人的深刻情感矛盾。陈世骧评价说：“然实一悲天悯人之作也......读《天龙八部》必须不流读，牢记住楔子一章，就可见冤孽与超度都发挥尽致。书中的人物情节，可谓无人不冤，有情皆孽，要写到尽致非把常人常情都写成离奇不可；书中的世界是朗朗世界到处藏着魍魉和鬼蜮，随时予以惊奇的揭发与讽刺，要供出这样一个可怜芸芸众生的世界，如何能不教结构松散？这样的人物情节和世界，背后笼罩着佛法的无边大超脱，时而透露出来。而在每逢动人处，我们会感到希腊悲剧理论中所谓恐怖与怜悯。”</br></br>
+                <img src="attachments/Heaven-Dragon-The-Eighth.jpg" alt="广州版《天龙八部》全五册" width="100%">
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="Rewards-3" class="Rewards">
+        <div class="container">
+                <h3 style="text-align: left"><b>管理信息系统永久商业授权</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;永久使用标准版授权，无需续费。本站可售报价：500元。</br>
+                &emsp;&emsp;官网: http​‌‌s://www.s-cms.cn</br></br>
+                <img src="attachments/cms.png" alt="管理信息系统永久商业授权" width="100%">
+                </p>
+        </div>
+    </div>
+
+    </br><hr>
+
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -348,7 +414,7 @@
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
                 <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-list fa-3x"></i></a></li>
                 <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-compact-disc fa-3x"></i></a></li>
-                <li><a href="attachments/rewards-catalog.pdf" target="_blank"  title="奖品目录" alt="奖品目录" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-regular fa-folder-open fa-3x"></i></a></li>
+                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-list-ol fa-3x"></i></a></li>
                 <li><a href="default.html" target="_blank"  title="英文网站" alt="英文网站" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
             </ul>
                     <ul class="list-unstyled size-m spaced">
