--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             </div></br></br></br></br>
             <ul class="list-inline spaced">
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
-                <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-list fa-3x"></i></a></li>
-                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-compact-disc fa-3x"></i></a></li>
-                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-list-ol fa-3x"></i></a></li>
+                <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-regular fa-thumbs-up fa-3x"></i></a></li>
+                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-circle-nodes fa-3x"></i></a></li>
+                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-trophy fa-3x"></i></a></li>
                 <li><a href="default.html" target="_blank"  title="英文网站" alt="英文网站" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
             </ul>
         </div>
@@ -412,9 +412,9 @@
                 <div class="col-md-6 col-md-offset-3 text-center">
             <ul class="list-inline spaced">
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
-                <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-list fa-3x"></i></a></li>
-                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-compact-disc fa-3x"></i></a></li>
-                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-list-ol fa-3x"></i></a></li>
+                <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-regular fa-thumbs-up fa-3x"></i></a></li>
+                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-circle-nodes fa-3x"></i></a></li>
+                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-trophy fa-3x"></i></a></li>
                 <li><a href="default.html" target="_blank"  title="英文网站" alt="英文网站" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
             </ul>
                     <ul class="list-unstyled size-m spaced">
