--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </br></br>
                 &emsp;&emsp;然而在现实情况下，低收入家庭和经济困难者可能就没有机会。我认为金钱不应该决定接受教育的机会，我希望生活在一个所有孩子都能接受良好教育的世界——而不仅仅是那些家庭负担得起的人。
                 </br></br>
-                &emsp;&emsp;为此，我和我的伙伴们愿意为同一个导师、持续6个月以上为低收入家庭和经济困难者免费辅导的私教课程，提供象征性激励的奖品（详见<a href="#Rewards" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">奖励物品</a>），并尽最大努力为这些有社会责任感的私教课程提供商业化推广支持。
+                &emsp;&emsp;为此，我和我的伙伴们愿意为同一个导师、持续6个月以上为低收入家庭和经济困难者免费辅导的私教课程，提供象征性激励的奖品（详见<a href="#Rewards" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">”奖励物品“），并尽最大努力为这些有社会责任感的私教课程提供商业化推广支持。
                 </br></br>
                 &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持，欢迎您发送邮件给 Min@kb727.com 联系我。
                 </br></br>
@@ -114,6 +114,42 @@
 
     </br>
 
+    <!-- 二手货照片，横幅美化
+
+america@kb727.com
+美国高中、本科、硕士、博士申请辅导
+美国教会学校情况介绍
+美国特许学校情况介绍
+
+business@kb727.com
+             国企集中采购岗位求职面试辅导
+酒店资产购置与谈判实务
+办公楼购置与谈判实务
+二手地及建筑物资产出售岗位求职面试辅导
+资产经营岗位求职面试辅导和岗位内推
+物流地产投资开发岗位求职面试辅导
+物流供应链电商职业规划和岗位内推
+产业园运营岗位求职面试辅导
+物业总经理岗位求职面试辅导
+             电气工程设计岗位求职面试辅导
+
+banking@kb727.com
+银行社招和校招岗位分析与面试辅导
+             银行网点新业态提升与基建工程管理岗位求职面试辅导
+银行产品开发岗位面试辅导
+金融科技与大数据职业规划和岗位内推
+信息技术与互联网职业规划和岗位内推
+
+shop@kb727.com
+美容院经营管理辅导
+服装企业经营管理辅导
+服装销售与顾客服务辅导
+
+historical@kb727.com
+中国古籍收藏辅导
+             人物传记与回忆录撰写指导
+    -->
+
     <div id="services-1" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>电气工程设计岗位求职面试辅导</b></h3>
@@ -131,7 +167,7 @@
                 &emsp;&emsp;11.电气工程师的出差及工具包；</br>
                 &emsp;&emsp;12.电气工程师的海外就业；</br>
                 &emsp;&emsp;13.电气工程师的职业素养。</br>
-                &emsp;&emsp;请联系engineering@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;请联系business@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -140,7 +176,7 @@
 
     <div id="services-2" class="services">
         <div class="container">
-                <h3 style="text-align: left"><b>央国企集中采购岗位求职面试辅导</b></h3>
+                <h3 style="text-align: left"><b>国企集中采购岗位求职面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;1.《关于规范中央企业采购管理工作的指导意见》（国资发改革规[2024]53号通知、八部委《招标投标领域公平竞争审查规则》16号令解读；</br>
                 &emsp;&emsp;2.国有企业采购类型、采购范围及适用的采购模式；</br>
@@ -155,7 +191,7 @@
                 &emsp;&emsp;11.生产运营类及大宗原材料采购及实施方案；</br>
                 &emsp;&emsp;12.其他咨询服务类及零星采购实施策略；</br>
                 &emsp;&emsp;13.“数字化”发展到“数智化”赋能招采的实践。</br>
-                &emsp;&emsp;本课程适合在国有企业从事投资决策、招标管理、物资采购、基建工程、成本管理、纪检监察、财务审计、合同法务、供应链管理等岗位的求职与面试，请联系procurement@kb727.com预约资深专家，全部讲解需120分钟，回答和交流全部问题。
+                &emsp;&emsp;本课程适合在国有企业从事投资决策、招标管理、物资采购、基建工程、成本管理、纪检监察、财务审计、合同法务、供应链管理等岗位的求职与面试，请联系business@kb727.com预约资深专家，全部讲解需120分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -195,7 +231,7 @@
                 &emsp;&emsp;20、档案电子化处理；</br>
                 &emsp;&emsp;21、财务账目；</br>
                 &emsp;&emsp;22、为尊者讳，为逝者讳。</br>
-                &emsp;&emsp;请联系memoir@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;请联系historical@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -268,7 +304,7 @@
                 &emsp;&emsp;56.施工现场管理与项目知识管理提升；</br>
                 &emsp;&emsp;57.银行基建工程项目审计的方法应用。</br>
                 &emsp;&emsp;<b>课程讲师：</b>授课老师具有丰富的银行营业网点与重要基础设施建设项目全过程管理经验，曾担任银行基建部门负责人，其授课善于理清实务中重点、难点、疑点、焦点等专业共性问题的机理和深层原因，帮助学员拓展解决问题的视野和思路，实质性地提高专业素养和能力。</br>
-                &emsp;&emsp;<b>课程预约：</b>请联系infrastructure@kb727.com预约资深专家，全部讲解需120分钟，回答和交流全部问题。
+                &emsp;&emsp;<b>课程预约：</b>请联系banking@kb727.com预约资深专家，全部讲解需120分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
