--- a/index.html
+++ b/index.html
@@ -114,60 +114,60 @@
 
     </br>
 
-    <!-- 二手货照片，横幅美化
+    <div id="services-1" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>美国高中、本科、硕士、博士申请辅导</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;请联系america@kb727.com预约美国留学中介。</br>
+                &emsp;&emsp;首先，我要说的是这家中介的专业性和服务质量。在我找了十多家中介都不满意的情况下，我最后选择了这家美国留学中介。他们的团队非常专业，对美国的教育体系和申请流程了如指掌。在与他们沟通的过程中，我发现他们对每个细节都非常关注，让我感受到了他们的用心和专业。</br>
+                &emsp;&emsp;其次，这家中介的服务范围非常广泛。除了提供文书申请服务外，他们还为我提供了签证辅导、住宿安排等一系列服务。在整个申请过程中，我都不需要操心任何事情，因为他们会全程跟进并确保一切顺利进行。这种一站式的服务让我感到非常省心，也让我对这家中介更加信任。</br>
+                &emsp;&emsp;最后，我想说的是这家中介的价格合理且性价比高。虽然他们的服务质量非常高，但他们的价格却非常合理。在我对比了很多家中介后，我发现他们的性价比是最高的。这也是我最终选择他们的重要原因之一。</br>
+                &emsp;&emsp;他们的专业性、服务质量和性价比都让我非常满意。如果你也在为留学申请而烦恼，不妨试试这家中介，相信你会有意想不到的收获！</br>
+                &emsp;&emsp;希望我的分享能对你有所帮助，祝你早日实现留学梦想！加油！
+                </p>
+        </div>
+    </div>
 
-america@kb727.com
-美国高中、本科、硕士、博士申请辅导
-美国教会学校情况介绍
-美国特许学校情况介绍
-
-business@kb727.com
-             国企集中采购岗位求职面试辅导
-酒店资产购置与谈判实务
-办公楼购置与谈判实务
-二手地及建筑物资产出售岗位求职面试辅导
-资产经营岗位求职面试辅导和岗位内推
-物流地产投资开发岗位求职面试辅导
-物流供应链电商职业规划和岗位内推
-产业园运营岗位求职面试辅导
-物业总经理岗位求职面试辅导
-             电气工程设计岗位求职面试辅导
-
-banking@kb727.com
-银行社招和校招岗位分析与面试辅导
-             银行网点新业态提升与基建工程管理岗位求职面试辅导
-银行产品开发岗位面试辅导
-金融科技与大数据职业规划和岗位内推
-信息技术与互联网职业规划和岗位内推
-
-shop@kb727.com
-美容院经营管理辅导
-服装企业经营管理辅导
-服装销售与顾客服务辅导
-
-historical@kb727.com
-中国古籍收藏辅导
-             人物传记与回忆录撰写指导
-    -->
+    </br>
 
     <div id="services-1" class="services">
         <div class="container">
-                <h3 style="text-align: left"><b>电气工程设计岗位求职面试辅导</b></h3>
+                <h3 style="text-align: left"><b>美国教会学校情况介绍</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;1.成套设备、机电工程、环境工程、水处理相关电气工程及自动化职业的现状、机会、瓶颈、前景；</br>
-                &emsp;&emsp;2.高低压配电系统设计、UPS电源供配电系统的双电源切换回路设计和UPS电源柜、电池柜设计；</br>
-                &emsp;&emsp;3.西门子、三菱、AB PLC硬件和软件编程；</br>
-                &emsp;&emsp;4.西门子WINCC和触摸屏画面组态；</br>
-                &emsp;&emsp;5.水泵供排水控制要求；</br>
-                &emsp;&emsp;6.空压机工作原理；</br>
-                &emsp;&emsp;7.厂区视频监控系统；</br>
-                &emsp;&emsp;8.伊顿UPS电源配置和系统配置；</br>
-                &emsp;&emsp;9.根据设备清单和仪表清单进行电气和仪控图纸设计，绘制电气二次原理图-柜子接线图-端子图，绘制仪控二次原理图-柜子接线图-端子图，绘制控制逻辑图；</br>
-                &emsp;&emsp;10.现场施工按照指导与监督、现场图纸沟通和工艺调试；</br>
-                &emsp;&emsp;11.电气工程师的出差及工具包；</br>
-                &emsp;&emsp;12.电气工程师的海外就业；</br>
-                &emsp;&emsp;13.电气工程师的职业素养。</br>
-                &emsp;&emsp;请联系business@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;🏫 K-12学制：Pre-K、Elementary、Middle、High School</br>
+                &emsp;&emsp;🏫 私立学校（Private School）；公立学校（Public School）包括：普通学校（Traditional School）、特许学校（Charter School）、磁石学校/特色学校（Magent School）</br>
+                &emsp;&emsp;🏫 教会学校（Religion School），独立学校（Independent School）</br>
+                &emsp;&emsp;🏫 男女混合学校（Coed），单性别学校（All-girls/All-boys）</br></br>
+                &emsp;&emsp;请联系america@kb727.com预约美国教会学校更多的情况介绍，全部讲解需60分钟，回答和交流全部问题。
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="services-1" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>美国特许学校情况介绍</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;比如我想开个学校，我就向政府要个charter，我开了学校自己经营，跟私立校一样自己办特色，凭本事吸引学生，来一个学生政府就给拨一个学生的钱。</br>
+                &emsp;&emsp;特许学校就是公立分出来的“非正规军”，整个体系里，只有4所学校的College Readiness Index达到100%。一定程度上与他们所称的Magnet Schools招生理念重合，是作为一类学校，以接收周边教育水平相对不太高地区的生源而存在。</br>
+                &emsp;&emsp;另外少数族裔学生所占比重，通常要比白人高得多。例如，Charter schools排名较靠前的American Indian Public High School，几乎可谓是专门为亚裔和西班牙裔开办的。有部分原因可归因于亚裔对于教育的重视，基本上亚裔在USnews排名靠前的学校中占比都不小。但也有一层重要原因在于，Charter schools受平权政策及学校所处城市、具体城区族群结构等因素的影响。</br></br>
+                &emsp;&emsp;请联系america@kb727.com预约美国特许学校更多的情况介绍，全部讲解需60分钟，回答和交流全部问题。</br></br>
+                &emsp;&emsp;本人教学案例研究：Buffalo Academy of Science Charter School</br>
+                &emsp;&emsp;Niche.com: 布法罗地区排名第一最佳特许学校</br>
+                &emsp;&emsp;GreatSchools.org: 布法罗地区顶尖特许学校</br>
+                &emsp;&emsp;USNews.com: 纽约州西部最好的特许高中</br>
+                &emsp;&emsp;376名高中年级学生，师生比为 1:10（全国1:17）。</br>
+                &emsp;&emsp;🏪 数据驱动决策，确保持续改进。</br>
+                &emsp;&emsp;🏪 提供荣誉课程、STEM预科课程、大学预修课程和高级文凭。</br>
+                &emsp;&emsp;🏪 提供心理干预、特殊计划、补习辅导、课后充实、教学调整。</br>
+                &emsp;&emsp;🏪 强调社交情感、性格发展、身心健康。</br>
+                &emsp;&emsp;🏪 注重教师培训，使所有教师都能成为课堂上的专家。</br>
+                &emsp;&emsp;🏪 强调教师与家庭的伙伴关系。</br>
+                &emsp;&emsp;🏪 注重大学规划和个人指导咨询。</br></br>
+                &emsp;&emsp;18 Agassiz Cir, Buffalo, NY14214</br>
+                &emsp;&emsp;Phone: (716) 415 2311</br>
+                &emsp;&emsp;buffsci.org
                 </p>
         </div>
     </div>
@@ -198,40 +198,141 @@ historical@kb727.com
 
     </br>
 
+    <!-- 
+business@kb727.com
+             国企集中采购岗位求职面试辅导
+酒店资产购置与谈判实务
+办公楼购置与谈判实务
+二手地及建筑物资产出售岗位求职面试辅导
+资产经营岗位求职面试辅导和岗位内推
+物流地产投资开发岗位求职面试辅导
+物流供应链电商职业规划和岗位内推
+产业园运营岗位求职面试辅导
+物业总经理岗位求职面试辅导
+             电气工程设计岗位求职面试辅导
+    -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div id="services-1" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>电气工程设计岗位求职面试辅导</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;1.成套设备、机电工程、环境工程、水处理相关电气工程及自动化职业的现状、机会、瓶颈、前景；</br>
+                &emsp;&emsp;2.高低压配电系统设计、UPS电源供配电系统的双电源切换回路设计和UPS电源柜、电池柜设计；</br>
+                &emsp;&emsp;3.西门子、三菱、AB PLC硬件和软件编程；</br>
+                &emsp;&emsp;4.西门子WINCC和触摸屏画面组态；</br>
+                &emsp;&emsp;5.水泵供排水控制要求；</br>
+                &emsp;&emsp;6.空压机工作原理；</br>
+                &emsp;&emsp;7.厂区视频监控系统；</br>
+                &emsp;&emsp;8.伊顿UPS电源配置和系统配置；</br>
+                &emsp;&emsp;9.根据设备清单和仪表清单进行电气和仪控图纸设计，绘制电气二次原理图-柜子接线图-端子图，绘制仪控二次原理图-柜子接线图-端子图，绘制控制逻辑图；</br>
+                &emsp;&emsp;10.现场施工按照指导与监督、现场图纸沟通和工艺调试；</br>
+                &emsp;&emsp;11.电气工程师的出差及工具包；</br>
+                &emsp;&emsp;12.电气工程师的海外就业；</br>
+                &emsp;&emsp;13.电气工程师的职业素养。</br>
+                &emsp;&emsp;请联系business@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
+                </p>
+        </div>
+    </div>
+
+    </br>
+
     <div id="services-3" class="services">
         <div class="container">
-                <h3 style="text-align: left"><b>人物传记与回忆录撰写指导</b></h3>
+                <h3 style="text-align: left"><b>美容院经营管理辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;一、对于国家、民族、历史、人本的责任。</br>
-                &emsp;&emsp;二、了解并熟悉事主的行业、单位及其沿革。</br>
-                &emsp;&emsp;三、善于整合信息，并自我进修，构建适用的知识体系。</br>
-                &emsp;&emsp;四、掌握访谈、启发、倾听、记录的有效方法。</br>
-                &emsp;&emsp;五、熟练运用录音、拍摄工具。</br>
-                &emsp;&emsp;六、对于仪表、时间、健康、人事、兴趣、心态、思维、金钱、情绪有细致入微的敏感度。</br>
-                &emsp;&emsp;七、细分专业：</br>
-                &emsp;&emsp;1、方言及分支；</br>
-                &emsp;&emsp;2、口述与誊写；</br>
-                &emsp;&emsp;3、备忘录；</br>
-                &emsp;&emsp;4、与老人及其家人通信的细节处理；</br>
-                &emsp;&emsp;5、事主著述研读；</br>
-                &emsp;&emsp;6、事主相关古籍研读与文言文写作；</br>
-                &emsp;&emsp;7、修订模式；</br>
-                &emsp;&emsp;8、机要模式；</br>
-                &emsp;&emsp;9、事主个人信息综合处理；</br>
-                &emsp;&emsp;10、回忆录相关的公关宣传；</br>
-                &emsp;&emsp;11、重要课题调查研究；</br>
-                &emsp;&emsp;12、典型事例分析总结；</br>
-                &emsp;&emsp;13、历年工作总结与计划提炼；</br>
-                &emsp;&emsp;14、会晤/接待/考察/拜访记录；</br>
-                &emsp;&emsp;15、旅行及其背景材料研究；</br>
-                &emsp;&emsp;16、国际金融/贸易与跨国往来；</br>
-                &emsp;&emsp;17、各种会议/会谈/大会活动记录；</br>
-                &emsp;&emsp;18、文件资料的集中保存与分散处理；</br>
-                &emsp;&emsp;19、管理信息系统与技术工具应用；</br>
-                &emsp;&emsp;20、档案电子化处理；</br>
-                &emsp;&emsp;21、财务账目；</br>
-                &emsp;&emsp;22、为尊者讳，为逝者讳。</br>
-                &emsp;&emsp;请联系historical@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;现在真的不是传统美容院的年代，联系business@kb727.com，由上海业内专家咨询解决四个问题：</br>
+                &emsp;&emsp;🙅🏻‍ 到店率</br>
+                &emsp;&emsp;🙅🏻‍ 升单率</br>
+                &emsp;&emsp;🙅🏻‍ 成交率</br>
+                &emsp;&emsp;🙅🏻‍ 裂变率</br></br>
+                &emsp;&emsp;一间好的门店靠的不仅仅是环境+效果，而是去店务化，建立四个体系化。</br>
+                &emsp;&emsp;🙅🏻‍ 差异化</br>
+                &emsp;&emsp;🙅🏻‍ 流程化</br>
+                &emsp;&emsp;🙅🏻‍ 标准化</br>
+                &emsp;&emsp;🙅🏻‍ 可复制化
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="services-3" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>服装企业经营管理辅导</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;欧美品牌如 ZARA、H&M、NIKE、NB 纷纷进入中国市场扩张，争夺市场。面对前所未有的激烈市场竞争，本土服装品牌企业在供应链管理上的问题逐渐凸显，由于对供应链和供应商缺乏有效管理，导致出现企业库存成倍增长、物流配送效率低下、客户忠诚度低等问题。因此，如何有效地从供应链角度解决本土服装品牌企业面对的问题显得尤为迫切。联系business@kb727.com，由杭州女装业内专家咨询辅导。
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="services-3" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>银行社招和校招岗位分析与面试辅导</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;请联系banking@kb727.com预约曾在总行担任高级管理人员的导师，辅导社会招聘、校园招聘的网申程序、填报志愿、岗位分析，在结构化面试前做适当演练和点评。
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+
+
+    <div id="services-3" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>银行产品开发岗位面试辅导</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;对于多数银行来说，当前主要考虑如何提高产品和服务的技术含量与附加值，避免金融服务同质化；如何进一步加大市场准入创新力度，争取基金托管、离岸金融、资产证券化、境外代客理财等市场准入资格，拓展经营范围和领域；如何开辟主动负债工具，探索发行金融债、可转债等筹资新品，优化资产、负债和资本结构；如何加快财富管理、衍生产品交易、电子银行产品、贸易融资等相关产品开发，通过新品开发吸引新、老客户；如何继续完善公金、个金VIP服务手段，提高客户忠诚度，这些是银行产品开发岗位需要关注的领域，请联系banking@kb727.com预约曾担任总行产品开发部门负责人的导师进行辅导。
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="services-3" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>金融科技与大数据职业规划和岗位内推</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;在金融与IT技术相融合的金融科技领域，随着大数据、数字孪生、流程挖掘等技术的进步，金融业的技术创新有可能进一步加速。请联系banking@kb727.com预约金融科技与大数据职业规划和岗位内推。
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="services-3" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>信息技术与互联网职业规划和岗位内推</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;🔜 技术岗、产品岗、运营岗</br>
+                &emsp;&emsp;🔜 市场岗、销售岗、职能岗</br></br>
+                &emsp;&emsp;请联系banking@kb727.com预约信息技术与互联网职业规划和岗位内推。
                 </p>
         </div>
     </div>
@@ -305,6 +406,57 @@ historical@kb727.com
                 &emsp;&emsp;57.银行基建工程项目审计的方法应用。</br>
                 &emsp;&emsp;<b>课程讲师：</b>授课老师具有丰富的银行营业网点与重要基础设施建设项目全过程管理经验，曾担任银行基建部门负责人，其授课善于理清实务中重点、难点、疑点、焦点等专业共性问题的机理和深层原因，帮助学员拓展解决问题的视野和思路，实质性地提高专业素养和能力。</br>
                 &emsp;&emsp;<b>课程预约：</b>请联系banking@kb727.com预约资深专家，全部讲解需120分钟，回答和交流全部问题。
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="services-3" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>人物传记与回忆录撰写指导</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;一、对于国家、民族、历史、人本的责任。</br>
+                &emsp;&emsp;二、了解并熟悉事主的行业、单位及其沿革。</br>
+                &emsp;&emsp;三、善于整合信息，并自我进修，构建适用的知识体系。</br>
+                &emsp;&emsp;四、掌握访谈、启发、倾听、记录的有效方法。</br>
+                &emsp;&emsp;五、熟练运用录音、拍摄工具。</br>
+                &emsp;&emsp;六、对于仪表、时间、健康、人事、兴趣、心态、思维、金钱、情绪有细致入微的敏感度。</br>
+                &emsp;&emsp;七、细分专业：</br>
+                &emsp;&emsp;1、方言及分支；</br>
+                &emsp;&emsp;2、口述与誊写；</br>
+                &emsp;&emsp;3、备忘录；</br>
+                &emsp;&emsp;4、与老人及其家人通信的细节处理；</br>
+                &emsp;&emsp;5、事主著述研读；</br>
+                &emsp;&emsp;6、事主相关古籍研读与文言文写作；</br>
+                &emsp;&emsp;7、修订模式；</br>
+                &emsp;&emsp;8、机要模式；</br>
+                &emsp;&emsp;9、事主个人信息综合处理；</br>
+                &emsp;&emsp;10、回忆录相关的公关宣传；</br>
+                &emsp;&emsp;11、重要课题调查研究；</br>
+                &emsp;&emsp;12、典型事例分析总结；</br>
+                &emsp;&emsp;13、历年工作总结与计划提炼；</br>
+                &emsp;&emsp;14、会晤/接待/考察/拜访记录；</br>
+                &emsp;&emsp;15、旅行及其背景材料研究；</br>
+                &emsp;&emsp;16、国际金融/贸易与跨国往来；</br>
+                &emsp;&emsp;17、各种会议/会谈/大会活动记录；</br>
+                &emsp;&emsp;18、文件资料的集中保存与分散处理；</br>
+                &emsp;&emsp;19、管理信息系统与技术工具应用；</br>
+                &emsp;&emsp;20、档案电子化处理；</br>
+                &emsp;&emsp;21、财务账目；</br>
+                &emsp;&emsp;22、为尊者讳，为逝者讳。</br>
+                &emsp;&emsp;请联系historical@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="services-3" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>中国古典文献收藏与古籍整理辅导</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;请联系historical@kb727.com预约中国古典文献学研究者，辅导古籍收藏与整理实务，涵盖书写或印刷于1911年以前、反映中国古代文化、具有古典装订形式的各类书籍，包括简帛、纸写本、刻本、活字本、石印本等，进行辨伪、辑佚、审定、校勘、注释、标点、分段等整理工作。
                 </p>
         </div>
     </div>
@@ -419,7 +571,7 @@ historical@kb727.com
         <div class="container">
                 <h3 style="text-align: left"><b>广州版《天龙八部》全五册</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;这个版本基本上是买不到了，值得收藏！本站可售报价：300元。</br>
+                &emsp;&emsp;这个版本基本上是买不到了，值得收藏！</br>
                 &emsp;&emsp;《天龙八部》是作家金庸笔下魁宏复杂的一部武侠小说作品。创作初衷以佛教的神话生物象征，谱写8个主角，各自成章最后交织为一。连载时逐渐发展成多线叙事、伏笔绵密的群像连续剧，以大理段氏、姑苏慕容、萧峯身世为核心，前后达30年的家仇国恨的史诗悲剧。本书横跨地域广阔，牵涉民族与个人的深刻情感矛盾。陈世骧评价说：“然实一悲天悯人之作也......读《天龙八部》必须不流读，牢记住楔子一章，就可见冤孽与超度都发挥尽致。书中的人物情节，可谓无人不冤，有情皆孽，要写到尽致非把常人常情都写成离奇不可；书中的世界是朗朗世界到处藏着魍魉和鬼蜮，随时予以惊奇的揭发与讽刺，要供出这样一个可怜芸芸众生的世界，如何能不教结构松散？这样的人物情节和世界，背后笼罩着佛法的无边大超脱，时而透露出来。而在每逢动人处，我们会感到希腊悲剧理论中所谓恐怖与怜悯。”</br></br>
                 <img src="attachments/Heaven-Dragon-The-Eighth.jpg" alt="广州版《天龙八部》全五册" width="100%">
                 </p>
@@ -428,7 +580,23 @@ historical@kb727.com
 
     </br>
 
-    <div id="Rewards-3" class="Rewards">
+    <div id="Rewards-4" class="Rewards">
+        <div class="container">
+                <h3 style="text-align: left"><b>《现代成名学》上下册</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp; #说说你最想以什么样的方式出名</br>
+                &emsp;&emsp; #人不怕出名猪不怕壮</br>
+                &emsp;&emsp; #造出名场面</br>
+                &emsp;&emsp; #出名要趁早</br>
+                &emsp;&emsp; #公众舆论</br></br>
+                <img src="attachments/fame.jpg" alt="《现代成名学》上下册" width="100%">
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="Rewards-5" class="Rewards">
         <div class="container">
                 <h3 style="text-align: left"><b>管理信息系统永久商业授权</b></h3>
                 <p class="lead" style="text-align: left">
@@ -439,7 +607,21 @@ historical@kb727.com
         </div>
     </div>
 
-    </br><hr>
+    </br>
+
+    <div id="Rewards-6" class="Rewards">
+        <div class="container">
+                <h3 style="text-align: left"><b>各国硬币收藏夹</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;内含美元、日元、韩元、泰铢、菲律宾披索、阿联酋迪拉姆等各国硬币，仅作为奖品，不用于出售。</br></br>
+                <img src="attachments/coins.jpg" alt="硬币：韩元、菲律宾披索、阿联酋迪拉姆" width="100%">
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <hr>
 
     <!-- Footer -->
     <footer>
