--- a/index.html
+++ b/index.html
@@ -130,50 +130,6 @@
 
     </br>
 
-    <div id="services-1" class="services">
-        <div class="container">
-                <h3 style="text-align: left"><b>美国教会学校情况介绍</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp;🏫 K-12学制：Pre-K、Elementary、Middle、High School</br>
-                &emsp;&emsp;🏫 私立学校（Private School）；公立学校（Public School）包括：普通学校（Traditional School）、特许学校（Charter School）、磁石学校/特色学校（Magent School）</br>
-                &emsp;&emsp;🏫 教会学校（Religion School），独立学校（Independent School）</br>
-                &emsp;&emsp;🏫 男女混合学校（Coed），单性别学校（All-girls/All-boys）</br></br>
-                &emsp;&emsp;请联系america@kb727.com预约美国教会学校更多的情况介绍，全部讲解需60分钟，回答和交流全部问题。
-                </p>
-        </div>
-    </div>
-
-    </br>
-
-    <div id="services-1" class="services">
-        <div class="container">
-                <h3 style="text-align: left"><b>美国特许学校情况介绍</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp;比如我想开个学校，我就向政府要个charter，我开了学校自己经营，跟私立校一样自己办特色，凭本事吸引学生，来一个学生政府就给拨一个学生的钱。</br>
-                &emsp;&emsp;特许学校就是公立分出来的“非正规军”，整个体系里，只有4所学校的College Readiness Index达到100%。一定程度上与他们所称的Magnet Schools招生理念重合，是作为一类学校，以接收周边教育水平相对不太高地区的生源而存在。</br>
-                &emsp;&emsp;另外少数族裔学生所占比重，通常要比白人高得多。例如，Charter schools排名较靠前的American Indian Public High School，几乎可谓是专门为亚裔和西班牙裔开办的。有部分原因可归因于亚裔对于教育的重视，基本上亚裔在USnews排名靠前的学校中占比都不小。但也有一层重要原因在于，Charter schools受平权政策及学校所处城市、具体城区族群结构等因素的影响。</br></br>
-                &emsp;&emsp;请联系america@kb727.com预约美国特许学校更多的情况介绍，全部讲解需60分钟，回答和交流全部问题。</br></br>
-                &emsp;&emsp;本人教学案例研究：Buffalo Academy of Science Charter School</br>
-                &emsp;&emsp;Niche.com: 布法罗地区排名第一最佳特许学校</br>
-                &emsp;&emsp;GreatSchools.org: 布法罗地区顶尖特许学校</br>
-                &emsp;&emsp;USNews.com: 纽约州西部最好的特许高中</br>
-                &emsp;&emsp;376名高中年级学生，师生比为 1:10（全国1:17）。</br>
-                &emsp;&emsp;🏪 数据驱动决策，确保持续改进。</br>
-                &emsp;&emsp;🏪 提供荣誉课程、STEM预科课程、大学预修课程和高级文凭。</br>
-                &emsp;&emsp;🏪 提供心理干预、特殊计划、补习辅导、课后充实、教学调整。</br>
-                &emsp;&emsp;🏪 强调社交情感、性格发展、身心健康。</br>
-                &emsp;&emsp;🏪 注重教师培训，使所有教师都能成为课堂上的专家。</br>
-                &emsp;&emsp;🏪 强调教师与家庭的伙伴关系。</br>
-                &emsp;&emsp;🏪 注重大学规划和个人指导咨询。</br></br>
-                &emsp;&emsp;18 Agassiz Cir, Buffalo, NY14214</br>
-                &emsp;&emsp;Phone: (716) 415 2311</br>
-                &emsp;&emsp;buffsci.org
-                </p>
-        </div>
-    </div>
-
-    </br>
-
     <div id="services-2" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>国企集中采购岗位求职面试辅导</b></h3>
@@ -198,43 +154,68 @@
 
     </br>
 
-    <!-- 
-business@kb727.com
-             国企集中采购岗位求职面试辅导
-酒店资产购置与谈判实务
-办公楼购置与谈判实务
-二手地及建筑物资产出售岗位求职面试辅导
-资产经营岗位求职面试辅导和岗位内推
-物流地产投资开发岗位求职面试辅导
-物流供应链电商职业规划和岗位内推
-产业园运营岗位求职面试辅导
-物业总经理岗位求职面试辅导
-             电气工程设计岗位求职面试辅导
-    -->
+    <div id="services-1" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>酒店资产购置与谈判实务</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;请联系business@kb727.com预约资深专家，辅导酒店资产收购需要关注的土地及建筑物、设备设施、监管要求、证照、法务、财务、税务、价格、投资回报、市场、地理位置、品牌、声誉、人员等评估与谈判要素，适合资产收购从业人员及相关岗位求职面试，全部讲解需90分钟，回答和交流全部问题。
+                </p>
+        </div>
+    </div>
 
+    </br>
 
+    <div id="services-1" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>办公楼购置与谈判实务</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;请联系business@kb727.com预约资深专家，辅导办公楼资产收购需要关注的开发商资质、土地及建筑物、土地性质、规划面积/计容面积/实测面积、设备设施、监管要求、证照、法务、财务、税务、维修基金、付款进度与比例、区域成交均价、建安费用成本、投资回报、区位、品牌昭示、办公物业范围、地块使用及物业管理区域划分、交付标准、产权车位等评估与谈判要素，适合资产收购从业人员及相关岗位求职面试，全部讲解需90分钟，回答和交流全部问题。
+                </p>
+        </div>
+    </div>
 
+    </br>
 
+    <div id="services-1" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>二手地及建筑物资产出售岗位求职面试辅导</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;请联系business@kb727.com预约资深专家，辅导二手地及建筑物资产出售岗位所需掌握的新增意向客户、安排高层会议、签订框架协议及保密协议、保证金到账、确认客户的项目规划方案、政府初步接受意向客户及其项目规划方案、与政府沟通并达成有利于项目推进的共识、政府基本接受客户项目规划方案、对接政府推荐的意向客户或收储平台、推动党委和政府对项目方案形成决定、内部会签与决策、签订交易合同或征收协议、首付款到账、尾款到账、资产交割与档案交接。
+                </p>
+        </div>
+    </div>
 
+    </br>
 
+    <div id="services-1" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>资产经营总经理岗位求职面试辅导和岗位内推</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;请联系business@kb727.com预约资深专家，辅导并内推资产经营总经理岗位求职面试：</br>
+                &emsp;&emsp;✔  境内外大中型物流仓储及其地产、基金的重要人事变动。</br>
+                &emsp;&emsp;✔  境内外大中型物流仓储及其地产、基金在“投、融、管、退”各方面的重要动态信息。</br>
+                &emsp;&emsp;✔  全国各地各级政府在重点区域的招商部署、飞地或联络处安排。</br>
+                &emsp;&emsp;✔  全国各地上市公司、隐形富豪、暴发户在重点区域的投资布局、抄底交易。</br>
+                &emsp;&emsp;✔  重点区域1手、1.5手、2手土地及建筑物资产求购、出售、整租、代运营信息。</br>
+                &emsp;&emsp;✔  定期盘点“投拓 - 工程 - 运营 - 去化”关键任务，站在今后三五年的时间跨度看当前工作，谋发展，控成本，管团队，打开局面。</br>
+                &emsp;&emsp;✔  关键节点：获客、带看、保证金、协议关键条款洽谈、签约、进场、管理、应收款、退出。</br>
+                &emsp;&emsp;✔  通过“明确目标 - 分解任务 - 贡献资源 - 监督检查”16字工作方法，提高工作的有效性。
+                </p>
+        </div>
+    </div>
 
+    </br>
 
+    <div id="services-1" class="services">
+        <div class="container">
+                <h3 style="text-align: left"><b>物流地产投资总监岗位求职面试辅导</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;请联系business@kb727.com预约资深专家，辅导物流地产投资总监岗位求职面试所涉及的区位分析、货车限行管控、地块周边市政配套、土地价格、土地性质、土地年限、容积率及双倍计容、投资强度、税收要求、监管协议与投资协议罚则及违约条款、人防设施、绿化率、开/竣工时间、项目转让约束、集团穿透连带责任、土地摘牌、土地出让合同、用地规划许可证、土地证、工程规划许可证、施工许可证、房产证等关键节点。
+                </p>
+        </div>
+    </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </br>
 
     <div id="services-1" class="services">
         <div class="container">
@@ -262,37 +243,6 @@ business@kb727.com
 
     <div id="services-3" class="services">
         <div class="container">
-                <h3 style="text-align: left"><b>美容院经营管理辅导</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp;现在真的不是传统美容院的年代，联系business@kb727.com，由上海业内专家咨询解决四个问题：</br>
-                &emsp;&emsp;🙅🏻‍ 到店率</br>
-                &emsp;&emsp;🙅🏻‍ 升单率</br>
-                &emsp;&emsp;🙅🏻‍ 成交率</br>
-                &emsp;&emsp;🙅🏻‍ 裂变率</br></br>
-                &emsp;&emsp;一间好的门店靠的不仅仅是环境+效果，而是去店务化，建立四个体系化。</br>
-                &emsp;&emsp;🙅🏻‍ 差异化</br>
-                &emsp;&emsp;🙅🏻‍ 流程化</br>
-                &emsp;&emsp;🙅🏻‍ 标准化</br>
-                &emsp;&emsp;🙅🏻‍ 可复制化
-                </p>
-        </div>
-    </div>
-
-    </br>
-
-    <div id="services-3" class="services">
-        <div class="container">
-                <h3 style="text-align: left"><b>服装企业经营管理辅导</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp;欧美品牌如 ZARA、H&M、NIKE、NB 纷纷进入中国市场扩张，争夺市场。面对前所未有的激烈市场竞争，本土服装品牌企业在供应链管理上的问题逐渐凸显，由于对供应链和供应商缺乏有效管理，导致出现企业库存成倍增长、物流配送效率低下、客户忠诚度低等问题。因此，如何有效地从供应链角度解决本土服装品牌企业面对的问题显得尤为迫切。联系business@kb727.com，由杭州女装业内专家咨询辅导。
-                </p>
-        </div>
-    </div>
-
-    </br>
-
-    <div id="services-3" class="services">
-        <div class="container">
                 <h3 style="text-align: left"><b>银行社招和校招岗位分析与面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;请联系banking@kb727.com预约曾在总行担任高级管理人员的导师，辅导社会招聘、校园招聘的网申程序、填报志愿、岗位分析，在结构化面试前做适当演练和点评。
@@ -301,8 +251,6 @@ business@kb727.com
     </div>
 
     </br>
-
-
 
     <div id="services-3" class="services">
         <div class="container">
@@ -404,7 +352,7 @@ business@kb727.com
                 &emsp;&emsp;55.银行基建工程项目标准化管理、信息管理与综合管理的集成；</br>
                 &emsp;&emsp;56.施工现场管理与项目知识管理提升；</br>
                 &emsp;&emsp;57.银行基建工程项目审计的方法应用。</br>
-                &emsp;&emsp;<b>课程讲师：</b>授课老师具有丰富的银行营业网点与重要基础设施建设项目全过程管理经验，曾担任银行基建部门负责人，其授课善于理清实务中重点、难点、疑点、焦点等专业共性问题的机理和深层原因，帮助学员拓展解决问题的视野和思路，实质性地提高专业素养和能力。</br>
+                &emsp;&emsp;<b>课程讲师：</b>授课老师曾担任银行基建部门负责人，具有丰富的银行营业网点与重要基础设施建设项目全过程管理经验，其授课善于理清实务中重点、难点、疑点、焦点等专业共性问题的机理和深层原因，帮助学员拓展解决问题的视野和思路，实质性地提高专业素养和能力。</br>
                 &emsp;&emsp;<b>课程预约：</b>请联系banking@kb727.com预约资深专家，全部讲解需120分钟，回答和交流全部问题。
                 </p>
         </div>
@@ -445,7 +393,7 @@ business@kb727.com
                 &emsp;&emsp;20、档案电子化处理；</br>
                 &emsp;&emsp;21、财务账目；</br>
                 &emsp;&emsp;22、为尊者讳，为逝者讳。</br>
-                &emsp;&emsp;请联系historical@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;本课程适合史志初学者或相关岗位求职面试辅导，请联系historical@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -456,7 +404,7 @@ business@kb727.com
         <div class="container">
                 <h3 style="text-align: left"><b>中国古典文献收藏与古籍整理辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系historical@kb727.com预约中国古典文献学研究者，辅导古籍收藏与整理实务，涵盖书写或印刷于1911年以前、反映中国古代文化、具有古典装订形式的各类书籍，包括简帛、纸写本、刻本、活字本、石印本等，进行辨伪、辑佚、审定、校勘、注释、标点、分段等整理工作。
+                &emsp;&emsp;请联系historical@kb727.com预约中国古典文献学研究者，辅导古籍收藏与整理实务，涵盖书写或印刷于1911年以前、反映中国古代文化、具有古典装订形式的各类书籍，包括简帛、纸写本、刻本、活字本、石印本等，进行辨伪、辑佚、审定、校勘、注释、标点、分段等整理工作。本课程适合古籍收藏者或相关岗位求职面试辅导。
                 </p>
         </div>
     </div>
