--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
                 <h3 style="text-align: left"><b>资产经营总经理岗位求职面试辅导和岗位内推</b></h3>
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;请联系business@kb727.com预约资深专家，辅导并内推资产经营总经理岗位求职面试：</br>
-                &emsp;&emsp;✔  境内外大中型物流仓储及其地产、基金的重要人事变动。</br>
-                &emsp;&emsp;✔  境内外大中型物流仓储及其地产、基金在“投、融、管、退”各方面的重要动态信息。</br>
-                &emsp;&emsp;✔  全国各地各级政府在重点区域的招商部署、飞地或联络处安排。</br>
-                &emsp;&emsp;✔  全国各地上市公司、隐形富豪、暴发户在重点区域的投资布局、抄底交易。</br>
-                &emsp;&emsp;✔  重点区域1手、1.5手、2手土地及建筑物资产求购、出售、整租、代运营信息。</br>
-                &emsp;&emsp;✔  定期盘点“投拓 - 工程 - 运营 - 去化”关键任务，站在今后三五年的时间跨度看当前工作，谋发展，控成本，管团队，打开局面。</br>
-                &emsp;&emsp;✔  关键节点：获客、带看、保证金、协议关键条款洽谈、签约、进场、管理、应收款、退出。</br>
-                &emsp;&emsp;✔  通过“明确目标 - 分解任务 - 贡献资源 - 监督检查”16字工作方法，提高工作的有效性。
+                &emsp;&emsp;✔️  境内外大中型物流仓储及其地产、基金的重要人事变动。</br>
+                &emsp;&emsp;✔️  境内外大中型物流仓储及其地产、基金在“投、融、管、退”各方面的重要动态信息。</br>
+                &emsp;&emsp;✔️  全国各地各级政府在重点区域的招商部署、飞地或联络处安排。</br>
+                &emsp;&emsp;✔️  全国各地上市公司、隐形富豪、暴发户在重点区域的投资布局、抄底交易。</br>
+                &emsp;&emsp;✔️  重点区域1手、1.5手、2手土地及建筑物资产求购、出售、整租、代运营信息。</br>
+                &emsp;&emsp;✔️  定期盘点“投拓 - 工程 - 运营 - 去化”关键任务，站在今后三五年的时间跨度看当前工作，谋发展，控成本，管团队，打开局面。</br>
+                &emsp;&emsp;✔️  关键节点：获客、带看、保证金、协议关键条款洽谈、签约、进场、管理、应收款、退出。</br>
+                &emsp;&emsp;✔️  通过“明确目标 - 分解任务 - 贡献资源 - 监督检查”16字工作方法，提高工作的有效性。
                 </p>
         </div>
     </div>
@@ -278,8 +278,8 @@
         <div class="container">
                 <h3 style="text-align: left"><b>信息技术与互联网职业规划和岗位内推</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;🔜 技术岗、产品岗、运营岗</br>
-                &emsp;&emsp;🔜 市场岗、销售岗、职能岗</br></br>
+                &emsp;&emsp;☑️ 技术岗、产品岗、运营岗</br>
+                &emsp;&emsp;☑️ 市场岗、销售岗、职能岗</br></br>
                 &emsp;&emsp;请联系banking@kb727.com预约信息技术与互联网职业规划和岗位内推。
                 </p>
         </div>
